# john-inventory

./: .env.example  .gitignore  API_DOCUMENTATION.md  DATA_VERIFICATION.md  NAVIGATION_FIX.md  README.md  SERVER_STATUS.md  WJBK Computer invetory list 2025.xlsx  alembic.ini  import_data.py  pyproject.toml  start.ps1  start.sh  test_error_handling.py  test_file_api.py  test_navigation.py  upload_file.py
.cursor/plans/: ui_ux_improvements_plan_cf8153da.plan.md
alembic/: env.py
alembic/versions/: 8c814be0766b_initial_schema.py
app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py
app/models/: __init__.py  asset.py  asset_history.py  import_record.py  verification.py
app/routes/: assets.py  auth.py  dashboard.py  file_api.py  import.py  reports.py  verification.py
app/schemas/: asset.py  import.py
app/services/: asset_service.py  delta_service.py  import_service.py  validation_service.py
app/static/css/: custom.css
app/static/js/: toast.js
app/templates/: base.html
app/templates/assets/: detail.html  list.html
app/templates/auth/: login.html
app/templates/components/: asset_row.html  breadcrumb.html  delete_modal.html  empty_state.html  error_state.html  toast.html
app/templates/dashboard/: index.html
app/templates/errors/: error.html
app/templates/help/: index.html
app/templates/import/: history.html  mapping.html  preview.html  upload.html
app/templates/reports/: department_inventory.html  refresh_schedule.html  (+1 more)
app/validators/: __init__.py  column_detector.py  data_cleaner.py  excel_parser.py
(+3 files in other folders)
